Add notes in notebook

--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RETO LATAM - Mateo Aristizabal\n",
+    "RETO LATAM\n",
+    "\n",
+    "Jose Mateo Aritizabal Diaz          Empresa: Option\n",
+    "\n",
+    "Correo: jaristizabal@option.tech\n",
     "\n",
     "Este reto se trato de optimizar funciones en cuanto a memoria y tiempo de ejecucion\n",
     "\n",
@@ -296,19 +300,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 470.28 MiB, increment: 0.02 MiB\n"
+      "peak memory: 340.72 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
    "source": [
-    "%memit q2_memory.q2_memory(file_path)"
+    "%memit q2_memory.q2_memory(file_path) "
    ]
   },
   {
@@ -445,14 +449,32 @@
     "\n",
     "| Function | Time | Peak Memory | Memory Increment |\n",
     "|----------|------|-------------|------------------|\n",
-    "| q1_memory | 2.67 s ± 45.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 1380.73 MiB | 965.25 MiB |\n",
-    "| q1_time | 3.06 s ± 6.26 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 2520.23 MiB | 2051.48 MiB |\n",
-    "| q2_memory | 9.61 s ± 30.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 470.28 MiB | 0.02 MiB |\n",
+    "| q1_memory | 3.06 s ± 45.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 516.44 MiB | 0.06 MiB |\n",
+    "| q1_time | 2.67 s ± 6.26 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 1380.73 MiB MiB | 965.25 MiB |\n",
+    "| q2_memory | 9.61 s ± 30.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 340.72 MiB | 0.02 MiB |\n",
     "| q2_time | 9.49 s ± 51.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 470.30 MiB | 2.91 MiB |\n",
     "| q3_memory | 2.39 s ± 21.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 471.12 MiB | 0.52 MiB |\n",
     "| q3_time | 2.32 s ± 2.96 ms per loop (mean ± std. dev. of 7 runs, 1 loop each) | 470.45 MiB | 0.00 MiB |\n",
     "\n",
-    "Analisis:\n"
+    "Analisis: La funcion q1_memory logro reducir a mas de la mitad de la memoria usando particiones y a pesar de eso su tiempo de ejecucion esta\n",
+    "muy cerca de la funcion q1_time, la funcion q1_time utiliza mucha memoria pero su ejecucion es muy buena en 2.67 s.\n",
+    "\n",
+    "q2_memory redujo casi en 100 mb el uso de memoria pero us tiempo de ejecucion tambien estuvo muy cercano a q2_time sin embargo \n",
+    "q2_time tuvo 12 ms en su tiempo de ejecucion.La lectura de archivos linea a linea sirvio para la reduccion de memoria.\n",
+    "\n",
+    "El ultimo caso estuvo muy parejo en uso de memoria y de procesamiento ya que se intento de varias maneras y los resultados\n",
+    "siempre fueron cercanos en las funciones de memoria siempre se intento leer linea a linea y en el de timpo se tarto de usar\n",
+    "todos los recursos disponibles para tiempo de ejecucion.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus Track\n",
+    "\n",
+    "Se deja un Dockerfile para desplegar en los diferentes proveedores de nube y subir al registry de preferencia(DockerHub,Artifact Registry o ECR)\n",
+    ", GCP Cloud Run, AWS Fargate y Azure Container Apps."
    ]
   }
  ],
